// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArticleMeta /> should match snapshot 1`] = `
<div>
  <div
    class="sc-7c55c9a4-0 bRvXpo"
  >
    <p>
      <span>
        Por 
      </span>
      <a
        href="/author/aira-cruz"
      >
        Aira Cruz
      </a>
      <span
        class="separator"
      >
         | 
      </span>
      <time
        datetime="2023-05-09T04:49:38.694Z"
      >
        9 de mai. de 2023
      </time>
      <span
        class="separator"
      >
         | 
      </span>
      <span
        class="categories"
      >
        <span>
          <a
            href="/category/react-js"
          >
            ReactJs
          </a>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`<ArticleMeta /> should match snapshot with no author and categories 1`] = `
<div>
  <div
    class="sc-7c55c9a4-0 bRvXpo"
  >
    <p>
      <time
        datetime="2023-05-09T04:49:38.694Z"
      >
        9 de mai. de 2023
      </time>
    </p>
  </div>
</div>
`;
